backport 1.20.1, Java 17